# uGet

./: .clang-format  .gitignore  AUTHORS  CHANGELOG  README.md  meson.build  meson_options.txt
data/: meson.build
doc/: folders.txt
docs/: architecture.md  json-rpc-api.md
guides/: build_with_meson.md  migrate_to_gtk4.md
po/: meson.build
src/: meson.build
src/uget/: meson.build
src/uglib/: meson.build
src/ui-gtk/: UgtkAboutDialog.c  UgtkApp-callback.c  UgtkApp-main.c  UgtkApp-ui.c  UgtkApp.c  UgtkBanner.c  UgtkBatchDialog.c  UgtkConfig.c  UgtkConfirmDialog.c  UgtkDownloadForm.c  UgtkMenubar-ui.c  UgtkMenubar.c  UgtkNodeDialog.c  UgtkNodeView.c  UgtkScheduleForm.c  UgtkSelector.c  UgtkSettingDialog.c  UgtkSummary.c  UgtkTrayIcon.c  meson.build
src/ui-gtk4/: meson.build
tests/: meson.build
