option('gtk_version', type : 'combo', choices : ['3', '4', 'both'], value : '3', description : 'GTK version to build (3, 4, or both)')
option('notify', type : 'feature', value : 'enabled', description : 'Enable libnotify support')
option('appindicator', type : 'feature', value : 'auto', description : 'Build support for application indicators')
option('gstreamer', type : 'feature', value : 'enabled', description : 'Enable GStreamer audio support')
option('pwmd', type : 'feature', value : 'disabled', description : 'Enable pwmd support')
option('rss_notify', type : 'boolean', value : true, description : 'Enable RSS Notify')
option('unix_socket', type : 'boolean', value : false, description : 'Enable UNIX Domain Socket')
option('openssl', type : 'feature', value : 'enabled', description : 'Enable OpenSSL support')
option('gnutls', type : 'boolean', value : false, description : 'Enable GnuTLS support')
