install_data('uget-gtk.desktop', install_dir : join_paths(get_option('datadir'), 'applications'))
install_data('uget-gtk.appdata.xml', install_dir : join_paths(get_option('datadir'), 'metainfo'))

install_subdir('pixmaps', install_dir : join_paths(get_option('datadir'), 'uget'))
install_subdir('sounds', install_dir : join_paths(get_option('datadir'), 'uget'))
